<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.telefonica.euro_iaas</groupId>
    <artifactId>sdc-server-core</artifactId>
    <packaging>jar</packaging>
    <name>sdc-server-core</name>
    <version>1.7.0</version>

    <properties>
        <spring.version>3.0.5.RELEASE</spring.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.telefonica.euro_iaas</groupId>
            <artifactId>sdc-server-model</artifactId>
            <version>1.7.0</version>
        </dependency>
        <!-- Webedav java client Sardine -->
        <dependency>
            <groupId>com.googlecode.sardine</groupId>
            <artifactId>sardine</artifactId>
            <version>146</version>
        </dependency>
        <!-- Persistence -->
        <dependency>
            <groupId>com.telefonica.euro_iaas</groupId>
            <artifactId>commons-dao</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.telefonica.euro_iaas</groupId>
            <artifactId>commons-properties</artifactId>
            <version>1.0.0</version>
        </dependency>
        <!-- FOR ENTITY-MANAGER -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.4.2</version>
        </dependency>
        <!-- concrete Log4J Implementation for SLF4J API -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.4.2</version>
        </dependency>

        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.0.1</version>
        </dependency>

        <!-- SPRING DEPENDENCIES -->

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aop</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aspects</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-tx</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-orm</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>1.6.0</version>
            <scope>compile</scope>
        </dependency>
        <!-- /SPRING DEPENDENCIES -->

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.5</version>
        </dependency>

        <!-- TEST DEPENDENCIES -->

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <!-- To get test datasource -->
            <groupId>commons-dbcp</groupId>
            <artifactId>commons-dbcp</artifactId>
            <version>1.4</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>1.8.0.7</version>
            <scope>test</scope>
        </dependency>

        <!-- TAR/ZIP DEPENDENCIES -->
        <dependency>
            <groupId>org.apache.ant</groupId>
            <artifactId>ant</artifactId>
            <version>1.7.1</version>
        </dependency>

        <!--/JERSEY DEPENDENCIES -->
        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-client</artifactId>
            <version>1.6</version>
        </dependency>
        <dependency>
            <groupId>bouncycastle</groupId>
            <artifactId>bcprov-jdk16</artifactId>
            <version>140</version>
        </dependency>

        <dependency>
            <groupId>net.sf.json-lib</groupId>
            <artifactId>json-lib</artifactId>
            <version>2.4</version>
            <classifier>jdk15</classifier>
        </dependency>

        <dependency>
            <groupId>net.sourceforge.xuse</groupId>
            <artifactId>xuse-annotation-tool</artifactId>
            <version>01.00.00-RC2</version>
            <exclusions>
                <exclusion>
                    <groupId>sun.jdk</groupId>
                    <artifactId>tools</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.0.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.8</version>
            </plugin>

            <!-- <plugin> <groupId>com.soebes.maven.plugins.dmg</groupId>
                <artifactId>doxygen-maven-plugin</artifactId> <version>1.0.1</version> <executions>
                <execution> <phase>site</phase> <goals> <goal>report</goal> </goals> </execution>
                </executions> <configuration> <quiet>false</quiet> <projectname>SDC Server
                Core</projectname> <projectnumber>1.0</projectnumber> <outputlanguage>spanish</outputlanguage>
                <optimizeoutputjava>true</optimizeoutputjava> <extractall>true</extractall>
                <extractprivate>true</extractprivate> <referencesrelation>true</referencesrelation>
                <input>src/main</input> <recursive>true</recursive> <configurationFile>doxyfile.conf</configurationFile>
                <haveDot>true</haveDot> <callGraph>true</callGraph> <callerGraph>true</callerGraph>
                <sourceBrowser>true</sourceBrowser> <generateHtml>true</generateHtml> </configuration>
                </plugin> -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <scmCommentPrefix>[CLAUDIA-1]</scmCommentPrefix>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>2.2</version>
            </plugin>

                        <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.0-beta-3</version>
                <configuration>
                    <reportPlugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-project-info-reports-plugin</artifactId>
                            <version>2.2</version>
                            <reports>
                                <report>index</report>
                                <report>project-team</report>
                                <report>license</report>
                                <report>mailing-list</report>
                                <report>dependencies</report>
                                <report>dependency-convergence</report>
                                <report>plugin-management</report>
                                <report>cim</report>
                                <report>issue-tracking</report>
                                <report>scm</report>
                                <report>summary</report>
                            </reports>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-report-plugin</artifactId>
                            <version>2.6</version>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-javadoc-plugin</artifactId>
                            <version>2.7</version>
                            <configuration>
                                <doclet>gr.spinellis.umlgraph.doclet.UmlGraphDoc</doclet>
                                <docletArtifact>
                                    <groupId>gr.spinellis</groupId>
                                    <artifactId>UmlGraph</artifactId>
                                    <version>4.4</version>
                                </docletArtifact>
                                <additionalparam>
                     <![CDATA[
 -charset UTF-8
 -docencoding UTF-8
 -version
 -author
 -breakiterator
 -windowtitle "${project.name} ${project.version} API Reference"
 -doctitle "<img src='doc-files/logo.png'><br><b><font size='+2'>SDC Server</b></font><br>"
 -bottom "Copyright &#169; ${project.inceptionYear}-Present ${project.organization.name} All Rights Reserved."
 -use
 -tag async:a:Asynchronous
 -inferrel -inferdep -quiet -hide java.* -collpackages java.util.* -qualify
 -postfixpackage -nodefontsize 9
 -nodefontpackagesize 7
                     ]]>
                                </additionalparam>
                            </configuration>
                        </plugin>


                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-checkstyle-plugin</artifactId>
                            <version>2.6</version>
                        </plugin>
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>findbugs-maven-plugin</artifactId>
                            <version>2.3.1</version>
                            <configuration>
                                <argLine>-Xmx256m</argLine>
                                <argLine>-XX:MaxPermSize=256m</argLine>
                            </configuration>
                            <!-- Usually findbugs needs a lot of memory,
                                change these values if needed. -->
                        </plugin>
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>jdepend-maven-plugin</artifactId>
                            <version>2.0-beta-2</version>
                        </plugin>
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>cobertura-maven-plugin</artifactId>
                            <version>2.4</version>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-jxr-plugin</artifactId>
                            <version>2.1</version>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-pmd-plugin</artifactId>
                            <version>2.5</version>
                            <configuration>
                                <linkXref>true</linkXref>
                                <minimumTokens>100</minimumTokens>
                                <minimumPriority>3</minimumPriority>
                                <!-- Change minimum priority to see more
                                    or less messages -->
                                <targetJdk>1.6</targetJdk>
                            </configuration>
                        </plugin>
                    </reportPlugins>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>debug</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>2.0.2</version>
                        <configuration>
                            <source>1.6</source>
                            <target>1.6</target>
                            <!-- includes debug information in class files -->
                            <debug>true</debug>
                            <encoding>UTF-8</encoding>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>


    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.8</version>
                <configuration>
                    <doclet>gr.spinellis.umlgraph.doclet.UmlGraphDoc</doclet>
                    <docletArtifact>
                        <groupId>gr.spinellis</groupId>
                        <artifactId>UmlGraph</artifactId>
                        <version>4.4</version>
                    </docletArtifact>
                    <additionalparam>
                     <![CDATA[
 -charset UTF-8
 -docencoding UTF-8
 -version
 -author
 -breakiterator
 -windowtitle "${project.name} ${project.version} API Reference"
 -doctitle "<img src='doc-files/logo.png'><br><b><font size='+2'>SDC Server</b></font><br>"
 -bottom "Copyright &#169; ${project.inceptionYear}-Present ${project.organization.name} All Rights Reserved."
 -use
 -tag async:a:Asynchronous
 -inferrel -inferdep -quiet -hide java.* -collpackages java.util.* -qualify
 -postfixpackage -nodefontsize 9
 -nodefontpackagesize 7
                     ]]>
                    </additionalparam>
                </configuration>
            </plugin>
            <!-- <plugin> <groupId>com.soebes.maven.plugins.dmg</groupId>
                <artifactId>doxygen-maven-plugin</artifactId> <version>1.0.1</version> </plugin> -->
        </plugins>
    </reporting>

    <repositories>
        <repository>
            <id>${repoMavenId}</id>
            <name>${repoMavenName}</name>
            <url>${repoMavenUrl}</url>
        </repository>
        <repository>
            <id>java repository</id>
            <name>Java Repository</name>
            <url>http://download.java.net/maven/2/</url>
        </repository>

        <repository>
            <id>maven-restlet</id>
            <name>Public online Restlet repository</name>
            <url>http://maven.restlet.org</url>
        </repository>
        <!-- WEBDAV JAVA CLIENT SARDINE -->
        <repository>
            <id>sardine-google-svn-repo</id>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <name>Sardine maven repo at Google Code</name>
            <url>http://sardine.googlecode.com/svn/maven/</url>
        </repository>

        <repository>
            <id>thirdparty</id>
            <name>3rd party</name>
            <url>http://ci-eurolass.hi.inet/nexus/content/repositories/thirdparty/</url>
        </repository>

    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>thirdparty</id>
            <name>3rd party</name>
            <url>http://ci-eurolass.hi.inet/nexus/content/repositories/thirdparty/</url>
        </pluginRepository>
    </pluginRepositories>

    <!-- ===================================== Distribution Management ==== -->
    <distributionManagement>
        <!-- Repositorio para hacer el deploy de las releases -->
        <repository>
            <id>${repoMavenId}</id>
            <name>${repoMavenName}</name>
            <url>${repoMavenUrl}</url>
        </repository>
        <!--Don't want deploy snapshots -->
        <!-- <snapshotRepository> <id>${repoMavenSnapshotId}</id> <name>${repoMavenSnapshotName}</name>
            <url>${repoMavenSnapshotUrl}</url> </snapshotRepository> -->
        <site>
            <id>${repoSiteId}</id>
            <name>${repoSiteName}</name>
            <url>${repoSiteUrl}/${project.groupId}/${project.artifactId}/${project.version}
               </url>
        </site>
    </distributionManagement>

</project>
